Update DefaultCookieConfig.java